# gamae

./: CMakeLists.txt  GAMAE  arsenal.h  gm.cpp  gm.h  main.cpp  makefile  player.cpp  player.h  weapon.cpp  weapon.h
res/cfx/: randomguy-evil.xcf  randomguy.xcf
res/weapons/M4/: m4-default.xcf
res/weapons/PUMP/: pump-default.xcf
